--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <script src="js/jquery.history.js"></script>
     <script src="js/instructivo.js"></script>
     <link href="img/favicon.png" rel="shortcut icon" type="image/png">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZZ8MCPWMWC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZZ8MCPWMWC');
+</script>
 </head>
 <body class="vanilla">
     <div id="contenedor">
